# teleop_modular

./: .buildinfo  .clang-format  LICENSE  README.md  default.nix  genindex.html  index.html  modules.html  objects.inv  overlay.nix  search.html  searchindex.js
control_mode/: CMakeLists.txt  package.xml
control_mode/include/control_mode/: control_mode.hpp  input_collection.hpp  input_interface.hpp  input_ptr.hpp  visibility_control.h
control_mode/include/control_mode/event/: event.hpp  event_collection.hpp  event_listener.hpp  event_listener_queue.hpp
control_mode/src/: control_mode.cpp
control_mode/src/event/: event.cpp  event_listener_queue.cpp
control_mode_plugins/input_publisher_mode/: CMakeLists.txt  README.md  default.nix  package.xml  plugins.xml
control_mode_plugins/input_publisher_mode/include/input_publisher_mode/: colors.hpp  input_publisher_mode.hpp  visibility_control.h
control_mode_plugins/input_publisher_mode/src/: input_publisher_mode.cpp
control_mode_plugins/locked_publisher/: CMakeLists.txt  README.md  default.nix  package.xml  plugins.xml
control_mode_plugins/locked_publisher/include/locked_publisher/: locked_publisher.hpp  visibility_control.h
control_mode_plugins/locked_publisher/src/: locked_publisher.cpp
teleop_core/: CMakeLists.txt  README.md  default.nix  package.xml
teleop_core/config/: example.config.yaml
teleop_core/include/teleop_core/: colors.hpp  teleop_modular.hpp
teleop_core/include/teleop_core/commands/: Command.hpp  CommandDelegate.hpp  CommandManager.hpp  IncrementAxisCommand.hpp  LogCommand.hpp  SetAxisCommand.hpp  SetButtonCommand.hpp  SwitchControlModeCommand.hpp
teleop_core/include/teleop_core/control_modes/: ControlModeManager.hpp  ControllerOrdering.hpp  control_mode_manager.hpp  control_mode_manager_state_publisher.hpp  controller_manager_manager.cpp  controller_manager_manager.hpp  controller_ordering.hpp  fake_event_collection.hpp  fake_input_collection.hpp
teleop_core/include/teleop_core/events/: ButtonEvent.hpp  Event.hpp  EventCollection.hpp  EventListener.hpp  EventListenerQueue.hpp  EventManager.hpp
teleop_core/include/teleop_core/input_sources/: InputSourceHandle.hpp  InputSourceManager.hpp  Remapper.hpp  remapper_assoc.hpp  remapper_reducer.hpp
teleop_core/include/teleop_core/inputs/: Axis.hpp  Button.hpp  InputAggregator.hpp  InputCollection.hpp  InputCommon.hpp  InputDefinition.hpp  (+7 more)
teleop_core/src/: parameters.yaml  teleop_modular.cpp
teleop_core/src/commands/: Command.cpp  CommandManager.cpp  IncrementAxisCommand.cpp  LogCommand.cpp  SetAxisCommand.cpp  SetButtonCommand.cpp  SwitchControlModeCommand.cpp
teleop_core/src/control_modes/: ControlModeManager.cpp  control_mode_manager.cpp  control_mode_manager_state_publisher.cpp  controller_manager_manager.cpp  fake_input_collection.hpp
teleop_core/src/events/: ButtonEvent.cpp  Event.cpp  EventCollection.cpp  EventListenerQueue.cpp  EventManager.cpp
teleop_core/src/input_sources/: InputSourceHandle.cpp  InputSourceManager.cpp  Remapper.cpp
teleop_core/src/inputs/: Axis.cpp  Button.cpp  InputAggregator.cpp  InputCollection.cpp  InputCommonSpecializations.cpp  InputManager.cpp  InputMap.cpp  InputMapBuilder.cpp  InputVector.cpp  InputVectorBuilder.cpp  input_pipeline_builder.cpp
teleop_core/test/: test_input_map.cpp  test_input_pipeline.cpp  test_inputs.cpp  test_state.cpp
teleop_modular/: CMakeLists.txt  default.nix  package.xml  plugins.xml
teleop_modular/config/: example.config.yaml
teleop_modular/include/teleop_modular/: SpawnableLog.hpp  teleop_modular.hpp  utils.hpp
teleop_modular/src/: parameters.yaml  teleop_modular.cpp
teleop_modular/src/commands/: Command.cpp  CommandManager.cpp  LogCommand.cpp  SetButtonCommand.cpp  SwitchControlModeCommand.cpp
teleop_modular/src/control_modes/: ControlMode.cpp  ControlModeManager.cpp
teleop_modular/src/events/: ButtonEvent.cpp  Event.cpp  EventCollection.cpp  EventListenerQueue.cpp  EventManager.cpp
teleop_modular/src/input_sources/: InputSource.cpp  InputSourceHandle.cpp  InputSourceManager.cpp
teleop_modular/src/inputs/: Axis.cpp  Button.cpp  InputCollection.cpp  InputCommonSpecializations.cpp  InputManager.cpp
teleop_modular/test/: test_inputs.cpp  test_state.cpp
teleop_modular_joy/: CMakeLists.txt  README.md  default.nix  package.xml  plugins.xml
teleop_modular_joy/include/teleop_modular_joy/: teleop_modular_joy.hpp
teleop_modular_joy/src/: joy_input_source_parameters.yaml  teleop_modular_joy.cpp
teleop_modular_twist/: CMakeLists.txt  README.md  default.nix  package.xml  plugins.xml
teleop_modular_twist/include/teleop_modular_twist/: teleop_modular_twist.hpp  visibility_control.h
teleop_modular_twist/src/: teleop_modular_twist.cpp  twist_control_mode_parameters.yaml
teleop_msgs/: CMakeLists.txt  README.md  default.nix  package.xml
teleop_msgs/msg/: CombinedInputValues.msg  CombinedInputs.msg  ControlModeState.msg  InputNames.msg  InputValues.msg  Inputs.msg  InvokedEvents.msg  LockedStatus.msg  TeleopState.msg
teleop_msgs/msgs/: InputValues.msg
teleop_node/: CMakeLists.txt  default.nix  package.xml
teleop_node/include/teleop_node/: input_change_listener.hpp  teleop_node.hpp
teleop_node/src/: input_change_listener.cpp  teleop_node.cpp
teleop_python_utils/: CMakeLists.txt  README.md  default.nix  package.xml  setup.py
teleop_python_utils/teleop_python_utils/: Axis.py  AxisCollection.py  Button.py  ButtonCollection.py  Event.py  EventCollection.py  Inputs.py  __init__.py
teleop_python_utils/teleop_python_utils/modules/: Axis.py  AxisCollection.py  Button.py  ButtonCollection.py  Event.py  EventCollection.py  Inputs.py
teleop_python_utils/tests/: dummy_test.py  test_init.py
teleop_srvs/: CMakeLists.txt  README.md  default.nix  package.xml
teleop_srvs/msg/: ControlModeDetails.msg  InputSourceDetails.msg  PluginInstanceDetails.msg
teleop_srvs/srv/: IncrementAxis.srv  ListControlModes.srv  ListInputSources.srv  ListPluginInstances.srv  LoadControlMode.srv  LoadPlugin.srv  SetAxis.srv  SetButton.srv  SwitchControlMode.srv  TriggerEvent.srv
(+245 files in other folders)
