<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control_mode</name>
  <version>0.1.0</version>
  <description>teleop_modular control mode base classes.</description>
  <maintainer email="bailey.chessum1@gmail.com">Bailey Chessum</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp_lifecycle</build_depend>
  <build_export_depend>rclcpp_lifecycle</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
