<?xml version="1.0"?>
<package format="2">
  <name>teleop_core</name>
  <version>0.0.3</version>
  <description>Core internal infrastructure for teleop_modular.</description>
  <maintainer email="bailey.chessum1@gmail.com">Bailey Chessum</maintainer>

  <license>Apache-2.0</license>

  <url type="website"></url>
  <author email="bailey.chessum1@gmail.com">Bailey Chessum</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>generate_parameter_library</buildtool_depend>

  <depend>rclcpp</depend>
  <build_depend>control_mode</build_depend>
  <build_export_depend>control_mode</build_export_depend>
  <depend>input_source</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
