<?xml version="1.0"?>
<package format="2">
  <name>teleop_core</name>
  <version>0.2.0</version>
  <description>Core internal infrastructure for teleop_modular.</description>
  <maintainer email="bailey.chessum1@gmail.com">Bailey Chessum</maintainer>

  <license>Apache-2.0</license>

  <url type="website"></url>
  <author email="bailey.chessum1@gmail.com">Bailey Chessum</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <build_depend>control_mode</build_depend>
  <build_export_depend>control_mode</build_export_depend>
  <build_depend>input_source</build_depend>
  <build_export_depend>input_source</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
