<?xml version="1.0"?>
<package format="2">
  <name>teleop_modular</name>
  <version>0.0.1</version>
  <description>A framework for teleoperation input handling in ROS2.</description>
  <maintainer email="bailey.chessum1@gmail.com">Bailey Chessum</maintainer>

  <license>Apache-2.0</license>

  <url type="website"></url>
  <author email="bailey.chessum1@gmail.com">Bailey Chessum</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>generate_parameter_library</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>core</depend>
  <depend>nova_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>control_mode</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
