<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_modular</name>
  <version>0.0.3</version>
  <description>Metapackage for teleop_modular, the modular framework for teleoperation in ROS2.</description>
  <maintainer email="bailey.chessum1@gmail.com">Bailey Chessum</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>control_mode</exec_depend>
  <exec_depend>input_source</exec_depend>
  <exec_depend>teleop_core</exec_depend>
  <exec_depend>teleop_modular_joy</exec_depend>
  <exec_depend>teleop_modular_twist</exec_depend>
  <exec_depend>teleop_node</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
