<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_modular_joy</name>
  <version>0.0.1</version>
  <description>An input source for joysticks, such as xbox controllers.</description>
  <author email="bailey.chessum1@gmail.com">Bailey Chessum</author>
  <maintainer email="bailey.chessum1@gmail.com">Bailey Chessum</maintainer>
  <url type="website"></url>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>teleop_modular</depend>
  <depend>joy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
