<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_node</name>
  <version>0.2.0</version>
  <description>ROS2 Node for teleop_modular.</description>
  <maintainer email="bailey.chessum1@gmail.com">Bailey Chessum</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fmt</depend>
  <depend>rclcpp</depend>
  <depend>teleop_core</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
