<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>input_publisher_mode</name>
  <version>0.1.0</version>
  <description>A generic control mode that forwards inputs from teleop_modular.</description>
  <maintainer email="felicitymatthews30@gmail.com">Felicity Matthews</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>teleop_msgs</depend>

  <build_depend>control_mode</build_depend>
  <build_export_depend>control_mode</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
